care-australia-uat/force-app/main/default/objects/Response_Campaigns__c/Response_Campaigns__c.object-meta.xml
<CustomObject>
    <label>Response_Campaigns</label>
    <nameField>
        <label>Response_Campaigns</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Response_Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>