care-australia-uat/force-app/main/default/objects/Response_Campaigns__c/fields/Sent_Number__c.field-meta.xml
<CustomField>
    <fullName>Sent_Number__c</fullName>
    <label>Sent_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>