care-australia-uat/force-app/main/default/objects/Response_Campaigns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Response_Number__c</columns>
    <columns>Sent_Number__c</columns>
    <columns>Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>